k8s-shared-infrastructure/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tas-shared
  labels:
    name: tas-shared
    purpose: shared-infrastructure
